feat: add database context and initializer

--- a/App.config
+++ b/App.config
@@ -12,4 +12,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="ModelContext"
+         connectionString="database=Library;user id=sa;password=Strong@123;data source=(LocalDb)\MSSQLLocalDB;initial catalog=WinformsLibraryManager.Model.ModelContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
