--- a/WinformsLibraryManager.csproj
+++ b/WinformsLibraryManager.csproj
@@ -100,6 +100,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database\DatabaseInitializer.cs" />
+    <Compile Include="Model\ModelContext.cs" />
     <Compile Include="UI\AppForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +136,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
