--- a/WinFormsLibraryManager.csproj
+++ b/WinFormsLibraryManager.csproj
@@ -101,7 +101,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database\DatabaseInitializer.cs" />
-    <Compile Include="Model\Book.cs" />
+    <Compile Include="Model\Book\Book.cs" />
+    <Compile Include="Model\Book\Reader.cs" />
+    <Compile Include="Model\Meta\Author.cs" />
+    <Compile Include="Model\Meta\Category.cs" />
+    <Compile Include="Model\Meta\Publisher.cs" />
+    <Compile Include="Model\Meta\Series.cs" />
+    <Compile Include="Model\Meta\Storage.cs" />
     <Compile Include="Model\Model.cs" />
     <Compile Include="Model\ModelContext.cs" />
     <Compile Include="Model\User.cs" />
@@ -139,7 +145,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="UI\View" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
