build: update entity framework default connection factory and connection string

--- a/App.config
+++ b/App.config
@@ -8,13 +8,18 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="Database=Library;Password=Strong@123;User Id=sa;Data Source=localhost;MultipleActiveResultSets=True;Initial Catalog=LibraryManager" />
+      </parameters>
+    </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   <connectionStrings>
     <add name="ModelContext"
-         connectionString="database=Library;user id=sa;password=Strong@123;data source=(LocalDb)\MSSQLLocalDB;initial catalog=WinFormsLibraryManager.Model.ModelContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+         connectionString="Database=Library;User Id=sa;password=Strong@123;Data Source=localhost;Initial Catalog=LibraryManager;MultipleActiveResultSets=True;App=EntityFramework"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
