--- a/WinFormsLibraryManager.csproj
+++ b/WinFormsLibraryManager.csproj
@@ -48,12 +48,6 @@
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Bcl.AsyncInterfaces.5.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Extensions.DependencyInjection, Version=5.0.0.1, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.Extensions.DependencyInjection.5.0.1\lib\net461\Microsoft.Extensions.DependencyInjection.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions, Version=5.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.Extensions.DependencyInjection.Abstractions.5.0.0\lib\net461\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
-    </Reference>
     <Reference Include="Pharmacist.Common, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Pharmacist.Common.2.0.6\lib\net472\Pharmacist.Common.dll</HintPath>
     </Reference>
@@ -100,6 +94,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bootstrapper.cs" />
     <Compile Include="Database\DatabaseInitializer.cs" />
     <Compile Include="Model\Book\Book.cs" />
     <Compile Include="Model\Book\Reader.cs" />
@@ -112,17 +107,23 @@
     <Compile Include="Model\ModelBase.cs" />
     <Compile Include="Model\ModelContext.cs" />
     <Compile Include="Model\User.cs" />
-    <Compile Include="UI\AppForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UI\AppForm.Designer.cs">
-      <DependentUpon>AppForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="UI\AppForm.resx">
-      <DependentUpon>AppForm.cs</DependentUpon>
-    </EmbeddedResource>
+    <Compile Include="UI\AppView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\AppView.Designer.cs">
+      <DependentUpon>AppView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\AppViewModel.cs" />
+    <Compile Include="UI\ConventionalViewLocator.cs" />
+    <Compile Include="UI\View\BookManage\BookManageView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\View\BookManage\BookManageView.Designer.cs">
+      <DependentUpon>BookManageView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\View\BookManage\BookManageViewModel.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -146,9 +147,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UI\View" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
