--- a/WinFormsLibraryManager.csproj
+++ b/WinFormsLibraryManager.csproj
@@ -128,6 +128,27 @@
       <DependentUpon>BookManageView.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\View\BookManage\BookManageViewModel.cs" />
+    <Compile Include="UI\View\ReaderManage\ReaderManageView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\View\ReaderManage\ReaderManageView.Designer.cs">
+      <DependentUpon>ReaderManageView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\View\ReaderManage\ReaderManageViewModel.cs" />
+    <Compile Include="UI\View\ReaderManage\TicketManageView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\View\ReaderManage\TicketManageView.Designer.cs">
+      <DependentUpon>TicketManageView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\View\ReaderManage\TicketManageViewModel.cs" />
+    <Compile Include="UI\View\UserManage\UserManageView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\View\UserManage\UserManageView.Designer.cs">
+      <DependentUpon>UserManageView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\View\UserManage\UserManageViewModel.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -137,6 +158,21 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\AppView.resx">
+      <DependentUpon>AppView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\View\BookManage\BookManageView.resx">
+      <DependentUpon>BookManageView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\View\ReaderManage\ReaderManageView.resx">
+      <DependentUpon>ReaderManageView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\View\ReaderManage\TicketManageView.resx">
+      <DependentUpon>TicketManageView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\View\UserManage\UserManageView.resx">
+      <DependentUpon>UserManageView.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
