--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="DynamicData" version="7.1.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Fody" version="6.5.0" targetFramework="net472" developmentDependency="true" />
+  <package id="MaterialSkin.2" version="2.1.4" targetFramework="net472"/>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Pharmacist.Common" version="2.0.6" targetFramework="net472" />
   <package id="ReactiveUI" version="13.2.10" targetFramework="net472" />
