--- a/WinFormsLibraryManager.csproj
+++ b/WinFormsLibraryManager.csproj
@@ -96,7 +96,9 @@
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.Windows.Forms.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
@@ -114,52 +116,52 @@
     <Compile Include="Model\ModelBase.cs" />
     <Compile Include="Model\ModelContext.cs" />
     <Compile Include="Model\User.cs" />
-    <Compile Include="Program.cs"/>
-    <Compile Include="Properties\AssemblyInfo.cs"/>
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\AppView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\AppView.Designer.cs">
       <DependentUpon>AppView.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\AppViewModel.cs"/>
-    <Compile Include="UI\ConventionalViewLocator.cs"/>
-    <Compile Include="UI\IAppViewModel.cs"/>
-    <Compile Include="UI\View\BookManage\BookItemManageView.cs">
+    <Compile Include="UI\AppViewModel.cs" />
+    <Compile Include="UI\ConventionalViewLocator.cs" />
+    <Compile Include="UI\IAppViewModel.cs" />
+    <Compile Include="UI\View\Book\BookItemManageView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\View\BookManage\BookItemManageView.Designer.cs">
+    <Compile Include="UI\View\Book\BookItemManageView.Designer.cs">
       <DependentUpon>BookItemManageView.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\View\BookManage\BookItemManageViewModel.cs"/>
-    <Compile Include="UI\View\BookManage\BookManageView.cs">
+    <Compile Include="UI\View\Book\BookItemManageViewModel.cs" />
+    <Compile Include="UI\View\Book\BookManageView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\View\BookManage\BookManageView.Designer.cs">
+    <Compile Include="UI\View\Book\BookManageView.Designer.cs">
       <DependentUpon>BookManageView.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\View\BookManage\BookManageViewModel.cs"/>
-    <Compile Include="UI\View\ReaderManage\ReaderManageView.cs">
+    <Compile Include="UI\View\Book\BookManageViewModel.cs" />
+    <Compile Include="UI\View\Reader\ReaderManageView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\View\ReaderManage\ReaderManageView.Designer.cs">
+    <Compile Include="UI\View\Reader\ReaderManageView.Designer.cs">
       <DependentUpon>ReaderManageView.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\View\ReaderManage\ReaderManageViewModel.cs" />
-    <Compile Include="UI\View\ReaderManage\TicketManageView.cs">
+    <Compile Include="UI\View\Reader\ReaderManageViewModel.cs" />
+    <Compile Include="UI\View\Reader\TicketManageView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\View\ReaderManage\TicketManageView.Designer.cs">
+    <Compile Include="UI\View\Reader\TicketManageView.Designer.cs">
       <DependentUpon>TicketManageView.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\View\ReaderManage\TicketManageViewModel.cs" />
-    <Compile Include="UI\View\UserManage\UserManageView.cs">
+    <Compile Include="UI\View\Reader\TicketManageViewModel.cs" />
+    <Compile Include="UI\View\User\UserManageView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UI\View\UserManage\UserManageView.Designer.cs">
+    <Compile Include="UI\View\User\UserManageView.Designer.cs">
       <DependentUpon>UserManageView.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\View\UserManage\UserManageViewModel.cs" />
+    <Compile Include="UI\View\User\UserManageViewModel.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -172,19 +174,19 @@
     <EmbeddedResource Include="UI\AppView.resx">
       <DependentUpon>AppView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\View\BookManage\BookItemManageView.resx">
+    <EmbeddedResource Include="UI\View\Book\BookItemManageView.resx">
       <DependentUpon>BookItemManageView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\View\BookManage\BookManageView.resx">
+    <EmbeddedResource Include="UI\View\Book\BookManageView.resx">
       <DependentUpon>BookManageView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\View\ReaderManage\ReaderManageView.resx">
+    <EmbeddedResource Include="UI\View\Reader\ReaderManageView.resx">
       <DependentUpon>ReaderManageView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\View\ReaderManage\TicketManageView.resx">
+    <EmbeddedResource Include="UI\View\Reader\TicketManageView.resx">
       <DependentUpon>TicketManageView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\View\UserManage\UserManageView.resx">
+    <EmbeddedResource Include="UI\View\User\UserManageView.resx">
       <DependentUpon>UserManageView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
@@ -199,27 +201,31 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config"/>
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\baseline_account_circle_black_24dp.png"/>
-    <Content Include="Resources\baseline_auto_stories_black_24dp.png"/>
-    <Content Include="Resources\baseline_history_black_24dp.png"/>
-    <Content Include="Resources\baseline_person_black_24dp.png"/>
-    <Content Include="Resources\baseline_search_black_24dp.png"/>
-    <Content Include="Resources\baseline_settings_black_24dp.png"/>
-    <Content Include="Resources\outline_event_note_black_24dp.png"/>
-    <Content Include="Resources\outline_library_books_black_24dp.png"/>
+    <Content Include="Resources\baseline_account_circle_black_24dp.png" />
+    <Content Include="Resources\baseline_auto_stories_black_24dp.png" />
+    <Content Include="Resources\baseline_history_black_24dp.png" />
+    <Content Include="Resources\baseline_person_black_24dp.png" />
+    <Content Include="Resources\baseline_search_black_24dp.png" />
+    <Content Include="Resources\baseline_settings_black_24dp.png" />
+    <Content Include="Resources\outline_event_note_black_24dp.png" />
+    <Content Include="Resources\outline_library_books_black_24dp.png" />
+    <Content Include="UI\Component\.gitkeep" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
+  <ItemGroup>
+    <Folder Include="UI\Component\" />
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them. For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.4.4\build\EntityFramework.props'))"/>
-    <Error Condition="!Exists('packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.4.4\build\EntityFramework.targets'))"/>
-    <Error Condition="!Exists('packages\Fody.6.5.0\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Fody.6.5.0\build\Fody.targets'))"/>
-    <Error Condition="!Exists('packages\ReactiveUI.Fody.13.2.10\build\ReactiveUI.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\ReactiveUI.Fody.13.2.10\build\ReactiveUI.Fody.props'))"/>
+    <Error Condition="!Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
+    <Error Condition="!Exists('packages\Fody.6.5.0\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Fody.6.5.0\build\Fody.targets'))" />
+    <Error Condition="!Exists('packages\ReactiveUI.Fody.13.2.10\build\ReactiveUI.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\ReactiveUI.Fody.13.2.10\build\ReactiveUI.Fody.props'))" />
   </Target>
   <Import Project="packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
   <Import Project="packages\Fody.6.5.0\build\Fody.targets" Condition="Exists('packages\Fody.6.5.0\build\Fody.targets')" />
