feat: add named entity combobox

--- a/WinFormsLibraryManager.csproj
+++ b/WinFormsLibraryManager.csproj
@@ -111,42 +111,48 @@
     <Compile Include="Model\Meta\Author.cs" />
     <Compile Include="Model\Meta\Category.cs" />
     <Compile Include="Model\Meta\Publisher.cs" />
-    <Compile Include="Model\Meta\Series.cs" />
-    <Compile Include="Model\Meta\Storage.cs" />
-    <Compile Include="Model\ModelBase.cs" />
-    <Compile Include="Model\ModelContext.cs" />
-    <Compile Include="Model\User.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Model\Meta\Series.cs"/>
+    <Compile Include="Model\Meta\Storage.cs"/>
+    <Compile Include="Model\ModelBase.cs"/>
+    <Compile Include="Model\ModelContext.cs"/>
+    <Compile Include="Model\User.cs"/>
+    <Compile Include="Program.cs"/>
+    <Compile Include="Properties\AssemblyInfo.cs"/>
     <Compile Include="UI\AppView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\AppView.Designer.cs">
       <DependentUpon>AppView.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\AppViewModel.cs" />
+    <Compile Include="UI\AppViewModel.cs"/>
     <Compile Include="UI\Component\CreateableComboBox.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="UI\Component\CreateableComboBox.Designer.cs">
       <DependentUpon>CreateableComboBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\ConventionalViewLocator.cs" />
-    <Compile Include="UI\IAppViewModel.cs" />
+    <Compile Include="UI\Component\NamedEntityCombobox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="UI\Component\NamedEntityCombobox.Designer.cs">
+      <DependentUpon>NamedEntityCombobox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\ConventionalViewLocator.cs"/>
+    <Compile Include="UI\IAppViewModel.cs"/>
     <Compile Include="UI\View\Book\BookItemManageView.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UI\View\Book\BookItemManageView.Designer.cs">
       <DependentUpon>BookItemManageView.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\View\Book\BookItemManageViewModel.cs" />
+    <Compile Include="UI\View\Book\BookItemManageViewModel.cs"/>
     <Compile Include="UI\View\Book\BookManageView.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UI\View\Book\BookManageView.Designer.cs">
       <DependentUpon>BookManageView.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\View\Book\BookManageViewModel.cs" />
+    <Compile Include="UI\View\Book\BookManageViewModel.cs"/>
     <Compile Include="UI\View\Reader\ReaderManageView.cs">
       <SubType>UserControl</SubType>
     </Compile>
