--- a/LibraryApplication/LibraryApplication.csproj
+++ b/LibraryApplication/LibraryApplication.csproj
@@ -6,4 +6,14 @@
         <UseWindowsForms>true</UseWindowsForms>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="EntityFramework" Version="6.4.4"/>
+        <PackageReference Include="MaterialSkin.2" Version="2.1.4"/>
+        <PackageReference Include="ReactiveUI" Version="13.2.18"/>
+        <PackageReference Include="ReactiveUI.Events.Winforms" Version="13.2.18"/>
+        <PackageReference Include="ReactiveUI.Fody" Version="13.2.18"/>
+        <PackageReference Include="ReactiveUI.Validation" Version="2.1.1"/>
+        <PackageReference Include="ReactiveUI.WinForms" Version="13.2.18"/>
+    </ItemGroup>
+
 </Project>
