--- a/LibraryApplication/LibraryApplication.csproj
+++ b/LibraryApplication/LibraryApplication.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="ReactiveUI.Fody" Version="13.2.18"/>
         <PackageReference Include="ReactiveUI.Validation" Version="2.1.1"/>
         <PackageReference Include="ReactiveUI.WinForms" Version="13.2.18"/>
+        <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0"/>
     </ItemGroup>
 
 </Project>
