--- a/LibraryApplication/LibraryApplication.csproj
+++ b/LibraryApplication/LibraryApplication.csproj
@@ -17,4 +17,13 @@
         <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Compile Update="UI\Component\DatePickerControl.cs">
+            <SubType>UserControl</SubType>
+        </Compile>
+        <Compile Update="UI\Component\NumericControl.cs">
+            <SubType>UserControl</SubType>
+        </Compile>
+    </ItemGroup>
+
 </Project>
