--- a/LibraryApplication/LibraryApplication.csproj
+++ b/LibraryApplication/LibraryApplication.csproj
@@ -18,12 +18,24 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Compile Update="Properties\Resources.Designer.cs">
+            <DesignTime>True</DesignTime>
+            <AutoGen>True</AutoGen>
+            <DependentUpon>Resources.resx</DependentUpon>
+        </Compile>
         <Compile Update="UI\Component\DatePickerControl.cs">
             <SubType>UserControl</SubType>
         </Compile>
         <Compile Update="UI\Component\NumericControl.cs">
             <SubType>UserControl</SubType>
         </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+        <EmbeddedResource Update="Properties\Resources.resx">
+            <Generator>ResXFileCodeGenerator</Generator>
+            <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+        </EmbeddedResource>
     </ItemGroup>
 
 </Project>
